--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # main text of home
-title: John Doe
-bio: A Person who travels the world eating noodles
+title: Haim Cohen
+bio: Chaim is a computer science high school teacher in New Jersey. In his free time, he hosts Security:inThirty, a security podcast, teaching people that salted hashes are not breakfast. At home he teaches his sons emoji as a second language, and 11 comes after 10.
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: My little playground on the internet
 
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: assets/images/chaimcupcake.jpg
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
@@ -35,11 +35,11 @@ disqus:
 
 # if you don't have any of social below, comment the line
 facebook: myfacebook
-twitter: mytwitter
+twitter: https://twitter.com/chaimtime
 instagram: myinstagram
 linkedin: mylinkedin
-github: mygithub
-email: myemail@gmail.com
+github: chaimtime
+email: chaim@chaimtime.com
 
 authors:
   johndoe:
