--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: My little playground on the internet
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/chaimcupcake.jpg
+picture: assets/images/haimcupcake.jpg
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
@@ -35,7 +35,7 @@ disqus:
 
 # if you don't have any of social below, comment the line
 facebook: myfacebook
-twitter: https://twitter.com/chaimtime
+twitter: chaimtime
 instagram: myinstagram
 linkedin: mylinkedin
 github: chaimtime
