--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
+facebook: ChaimCohen
 twitter: chaimtime
-instagram: myinstagram
-linkedin: mylinkedin
+instagram: chaimtime
+linkedin: cohenh
 github: chaimtime
 email: chaim@chaimtime.com
 
