--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume-url: https://chaimtime.github.io/Tutoring
 # If you want to include your resume, set to true
 # and specify source (external or local).
 tutoring: true
-resume-tutoring: true
+tutoring-external: true
 tutoring-url: https://chaimtime.github.io/Tutoring
 
 url: https://chaimtime.github.io/
