--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@ dark-theme: auto
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://chaimtime.github.io/Tutoring
+resume-url: https://chaimtime.github.io/tutoring
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
 tutoring: true
 tutoring-external: true
-tutoring-url: https://chaimtime.github.io/Tutoring
+tutoring-url: https://chaimtime.github.io/tutoring
 
 url: https://chaimtime.github.io/
 # your url: https://USERNAME.github.io
