--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 title: Haim Cohen
-bio: Chaim is a computer science high school teacher in New Jersey. In his free time, he hosts Security:inThirty, a security podcast, teaching people that salted hashes are not breakfast. At home he teaches his sons emoji as a second language, and 11 comes after 10.
+bio: Just a random guy on the internet playing with new, shiny things. 
 
 # twitter summary info
 description: My little playground on the internet
