Removed projects, changed first blog post.

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ github: chaimtime
 email: chaim@chaimtime.com
 
 authors:
-  johndoe:
+  Chaim:
     name: Haim Cohen
     bio: CS Teacher, Podcaster @inThirty, Organizer of @cryptovillage, and Chairman of @hpboro Public Information Committee.
     external-image: false
