profile picture for author

--- a/_config.yml
+++ b/_config.yml
@@ -50,9 +50,9 @@ email: chaim@chaimtime.com
 authors:
   Chaim:
     name: Haim Cohen
-    bio: CS Teacher, Podcaster @inThirty, Organizer of @cryptovillage, and Chairman of @hpboro Public Information Committee.
+    bio: CS Teacher, Podcaster @shortExplan, Organizer of @cryptovillage, and Chairman of @hpboro Public Information Committee.
     external-image: false
-    picture: assets/images/profile.jpg
+    picture: assets/images/haimcupcake.jpg
     twitter: chaimtime
   
 
