--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ twitter: chaimtime
 instagram: chaimtime
 linkedin: cohenh
 github: chaimtime
-mastodon: @chaimtime
+mastodon: chaimtime
 email: chaim@chaimtime.com
 
 authors:
