--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ email: chaim@chaimtime.com
 authors:
   Chaim:
     name: Haim Cohen
-    bio: CS Teacher, Podcaster @shortExplan, Organizer of @cryptovillage, and Chairman of @hpboro Public Information Committee.
+    bio: CS Teacher, Podcaster, Organizer of cryptovillage, and Chairman of hpboro Public Information Committee.
     external-image: false
     picture: assets/images/haimcupcakeround.jpg
     twitter: chaimtime
