--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ url: https://chaimtime.github.io
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+ analytics-google: 'G-Q8FEQL5W1T'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
